[package]
name = "paddle-contracted-mrr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version= "1.0.137", features=["derive"] }
serde_json = "1.0.81"
serde_urlencoded = "0.7.1"
tokio = { version ="1.18.2", features = ["full"] }
